# gen-plugin-export

./: .gitignore  LICENSE.txt  README.md  arg-helper.maxpat  exporter.maxpat  gen-example.maxpat  package-info.json  post-export.js  post-export.py
.github/workflows/: main.yml
Introjucer/: C74-Gen-AUPlugin.jucer  C74-Gen-Application.jucer  C74-Gen-VST3Plugin.jucer  C74-Gen-VSTPlugin.jucer
Introjucer/Introjucer.app/Contents/: Info.plist
JUCE/Projucer.app/Contents/: Info.plist
JUCE/extras/Projucer/: Projucer.jucer
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h
Jucer/: C74-Gen-Application.jucer  C74-Gen-VST3Plugin.jucer
Projucer/: C74-Gen-AUPlugin.jucer  C74-Gen-Application.jucer  C74-Gen-VST3Plugin.jucer
Projucer/Builds/VisualStudio2017/: C74GenPlugin.sln  C74GenPlugin_SharedCode.vcxproj  C74GenPlugin_SharedCode.vcxproj.filters  C74GenPlugin_VST3.vcxproj  C74GenPlugin_VST3.vcxproj.filters  resources.rc
Projucer/Builds/VisualStudio2019/: C74GenPlugin.sln  C74GenPlugin_SharedCode.vcxproj  C74GenPlugin_SharedCode.vcxproj.filters  (+1 more)
Projucer/JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
Source-App/: Main.cpp  MainComponent.cpp  UIComponent.cpp  UIComponent.h
Source-Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
exported-code/: C74_GENPLUGIN.cpp  C74_GENPLUGIN.h
exported-code/gen_dsp/: genlib.cpp  genlib.h  genlib_common.h  genlib_common_win.h  genlib_exportfunctions.h  genlib_ops.h  genlib_platform.h  json.c  json.h  json_builder.c  json_builder.h
extras/: Gen Plugin Export.maxpat  GenPluginExport.maxpat  package-lock.json  package.json  post-export.js
misc/: CMakeLists.txt
misc/JUCE/: ChangeList.txt
misc/JUCE/examples/DemoRunner/: DemoRunner.jucer
misc/JUCE/examples/DemoRunner/Builds/VisualStudio2017/: DemoRunner_App.vcxproj  DemoRunner_App.vcxproj.filters
misc/JUCE/examples/DemoRunner/Builds/VisualStudio2019/: DemoRunner_App.vcxproj  DemoRunner_App.vcxproj.filters
misc/JUCE/examples/Utilities/: PushNotificationsDemo.h
misc/JUCE/extras/AudioPerformanceTest/Builds/VisualStudio2019/: AudioPerformanceTest_App.vcxproj.filters
misc/JUCE/extras/AudioPluginHost/Builds/VisualStudio2019/: AudioPluginHost_App.vcxproj.filters
misc/JUCE/extras/Projucer/JuceLibraryCode/: JuceHeader.h
misc/JUCE/extras/Projucer/Source/Application/: jucer_CommandLine.cpp
misc/JUCE/extras/WindowsDLL/Builds/VisualStudio2019/: WindowsDLL_StaticLibrary.vcxproj.filters
misc/JUCE/modules/juce_audio_formats/: juce_audio_formats.h
misc/JUCE/modules/juce_audio_processors/: juce_audio_processors.cpp
misc/JUCE/modules/juce_dsp/frequency/: juce_Convolution.cpp
misc/JUCE/modules/juce_gui_extra/: juce_gui_extra.h
misc/JUCE/modules/juce_gui_extra/native/: juce_mac_SystemTrayIcon.cpp
misc/JUCE/modules/juce_opengl/: juce_opengl.cpp
misc/Source-App/: Main.cpp  MainComponent.cpp
misc/Source-Plugin/: PluginEditor.h  PluginProcessor.h
patchers/: export-tool.js  export-tool.maxpat
source/: GenPluginExport.maxpat  arg-helper.maxpat  package-lock.json  package.json  post-export.js
source/Projucer/: C74-Gen-VST3Plugin.jucer  out-C74-Gen-VST3Plugin.jucer
source/Source-App/: Main.cpp  MainComponent.cpp  UIComponent.cpp  UIComponent.h
source/Source-Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
(+76 files in other folders)
